# AI-HANDBOOK

./: .gitignore  ChatCompletionsAPI.py  README.MD  pydantic-course.py  pyproject.toml  test.py
AI-Agents/: input-validation.py  virtual-assistant.py  weather-agent.py
Structured Output/: README.MD  calender-event.py  function-call-format.py  instructor-model.py  json-format.py  ticketing-system-instructor-model.py  weather-report.py
functions/: openai-function-call-weather.py  openai-function-call.py
llm-tokenization/: count-the-tokens.py
responses/: function-call.py  openai-llm-call.py
workflow-patterns-for-AI-agents/: prompt-chaining.py
